<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="all">
    <string name="library_app_name">数字图书馆</string>
	<string name="library_main_title">数字图书馆</string>
    <string name="library_startwifi">无线网络未连接，现在连接</string>
    <string name="library_wifi_setting">无线网络设置</string>
    <string name="library_account_manage">账号管理</string>
    <string name="library_account_username">用户名:</string>
    <string name="library_account_passwd">密码:</string>
    <string name="library_account_login_username_hint">请输入用户名</string>
    <string name="library_account_login_passwd_hint">请输入密码</string>
    <string name="library_account_login">登录</string>
    <string name="library_account_invalidkey_hint">请输入</string>
    <string name="library_account_confirm">确定</string>
    <string name="library_account_cancel">退出</string>
    <string name="library_account_logout_confirm">确认退出当前账号</string>
    <string name="library_account_logout_success">退出成功</string>
    <string name="library_account_reader_certificate_no">证件号: </string>
    <string name="library_account_certificate_no_hint">请输入读者证件号，按菜单键选择其它证件类型 </string>
    <string name="library_account_disabled_id_number_hint">请输入二代残疾人证号，按菜单键可选择其它证件类型  </string>
    <string name="library_account_name">姓名:</string>
    <string name="library_account_name_hint">请输入姓名</string>
    <string name="library_account_passwd_confirm">确认密码:</string>
    <string name="library_account_passwd_confirm_hint">请再次输入密码</string>
    <string name="library_account_personal_detail_expansion">个人详细信息(选填) 展开</string>
    <string name="library_account_personal_detail_contraction">个人详细信息(选填) 收取</string>
    <string name="library_account_personal_phone">联系电话</string>
    <string name="library_account_personal_phone_hint">请输入联系电话</string>
    <string name="library_account_personal_email">E-mail</string>
    <string name="library_account_personal_email_hint">请输入Email</string>
    <string name="library_account_personal_company">单位名称</string>
    <string name="library_account_personal_company_hint">请输入单位名称</string>
    <string name="library_account_personal_zip">邮编</string>
    <string name="library_account_personal_zip_hint">请输入邮政编码</string>
    <string name="library_account_personal_addr">联系地址</string>
    <string name="library_account_personal_addr_hint">请输入联系地址</string>
    <string name="library_account_register">注册</string>
    <string name="library_account_certificate_type_select">证件类型选择 </string>
    <string name="library_account_nextstep">下一步</string>
    <string name="library_account_passwd_setting">密码设置</string>
    <string name="library_account_certificateno_empty">证件号不能为空</string>
    <string name="library_account_name_empty">姓名不能为空</string>
    <string name="library_account_username_empty">用户名不能为空</string>
    <string name="library_account_passwd_empty">密码不能为空</string>
    <string name="library_account_passwd_nosame">密码不一致</string>
    <string name="library_wait_reading_data">正在加载数据，请稍等</string>
    <string name="library_reading_data_error">加载数据失败</string>
    <string name="library_category_ebook">电子图书</string>
    <string name="library_category_audio">有声读物</string>
    <string name="library_category_video">视频课程</string>
    <string name="library_search_edit_hint">请输入，按确认键搜索</string>
    <string name="library_search_resource_empty">无检索结果</string>
    <string name="library_downloading_empty">无下载任务</string>
    <string name="library_downloaded_empty">无文件</string>
    <string name="library_download_chapter_index">第%1$s章</string>
    <string name="library_login_success">登录成功</string>
    <string name="library_login_fail">登录失败，网络未连接或者账号错误</string>
    <string name="library_account_fail">账号错误</string>
    <string name="library_account_bind_account_text">图书馆账号</string>
    <string name="library_account_bind_account_passwd_text">账号密码</string>
    <string name="library_account_bind_account_hint">请输入账号</string>
    <string name="library_account_bind_account_passwd_hint">请输入密码</string>
	<string name="library_loading">加载中</string>
	<string name="library_search_fail">无搜索结果</string>
	<string name="library_dict_search_success">词典查询</string>
	<string name="library_checksum_error">文件已损坏！</string>
	<string name="library_select_start">选定起点</string>
	<string name="library_select_end">选定终点</string>
	<string name="library_file_already_exist">文件已存在</string>
	<string name="library_save_newword_success">成功保存到生词本</string>
	<string name="library_save_newword_fail">保存到生词本失败</string>
	<string name="library_open_file_fail">文件已损坏！</string>
	<string name="library_no_explain">无例词</string>
	<string name="library_page_read_tips2">第%1$s页</string>
	<string name="library_page_read_tips">第%1$s页 总共%2$s页</string>
    <string name="library_en_explain_tips">字母表中的第 %1$s个字母</string>
    <string name="library_cn_explain_tips">的</string>
    <string name="library_to_top">已经到开头</string>
    <string name="library_to_bottom">已经到结尾</string>
    <string name="library_to_top1">已经到开头。</string>
    <string name="library_to_bottom1">已经到结尾。</string>
    <string name="library_setting_success">设定成功</string>
    <string name="library_has_finished_reading_the_last_book">已经读完最后一本书</string>
    <string name="library_first_chapter">已经到第一章</string>
  	<string name="library_last_chapter">已经到最后一章</string>
  	<string name="library_first_item">已经到第一条</string>
  	<string name="library_last_item">已经到最后一条</string>
  	<string name="library_speak_error">朗读失败</string>
  	<string name="library_success">成功</string>
  	<string name="library_add_collect_category">正在添加收藏分类</string>
  	<string name="library_add_collect_resource">正在添加收藏资源</string>
  	<string name="library_add_collect_success">收藏成功！</string>
  	<string name="library_add_collect_fail">该收藏已存在！</string>
  	<string name="library_resource_does_not_exist">该资源不存在！</string>
	<string name="library_menu_mark_tips">当前尚未创建书签</string>
	<string name="library_menu_mark_null">无书签</string>
	<string name="library_dialog_yes">是</string>
	<string name="library_dialog_no">否</string>
	<string name="library_dialog_delete">确认删除</string>
	<string name="library_dialog_delete_su">删除成功</string>
	<string name="library_dialog_delete_failed">删除失败</string>
	<string name="library_dialog_clear">确认清空</string>
	<string name="library_dialog_clear_su">清空成功</string>
	<string name="library_no_file">无文件</string>
	<string name="library_add_bookmark">正在添加书签</string>
	<string name="library_add_mark_su">添加书签成功</string>
	<string name="library_add_mark_cancel">取消增加书签</string>
	<string name="library_add_mark_has">该书签已存在，不可重复创建！</string>
	<string name="library_input_page_num">请输入页码</string>
	<string name="library_input_page_max">超出有效范围，自动纠正为最大页码</string>
	<string name="library_input_percent_num">请输入百分比</string>
	<string name="library_input_percent_max">超出有效范围，自动纠正为最大值</string>
	<string name="library_input_percent_error">请输入数字</string>
	<string name="library_downloading_addresource">正在将当前资源添加到下载列表，请稍候！</string>
	<string name="library_downloading_start">开始下载！</string>
	<string name="library_downloading_tips">当前资源已在在下载列表中，是否重新下载？</string>
	<string name="library_net_error">网络未连接！</string>
	<string name="library_del_bookmark">正在删除书签</string>
	<string name="library_del_bookmark_fail">该书签不存在！</string>
	<string name="library_favorite_category_null">无收藏</string>
	<string name="library_favorite_resource_null">无收藏</string>
	<string name="library_reading_history_null">无阅读历史</string>
	<string name="library_del_collect_category">正在删除收藏的分类</string>
	<string name="library_del_collect_resource">正在删除收藏的资源</string>
	<string name="library_del_history">正在删除阅读历史</string>
	<string name="library_del_success">删除成功！</string>
	<string name="library_del_fail">删除失败！</string>
	<string name="library_add_history">正在添加阅读历史</string>
	<string name="library_add_history_success">添加阅读历史成功！</string>
	<string name="library_add_history_fail">添加阅读历史失败！</string>
	<string name="library_register_success">注册成功！</string>
	<string name="library_register_fail">注册失败，网络未连接或信息错误</string>
	<string name="library_get_password_fail">密码找回失败！</string>
  	<string name="library_update_password_success">密码更新成功！</string>
	<string name="library_update_password_fail">密码更新失败！</string>
	<string name="library_del_downloadtask">正在删除下载任务</string>
	<string name="library_clear_downloadtask">正在清空下载任务</string>
	<string name="library_clear_history">正在清空阅读历史</string>
	<string name="library_clear_bookmark">正在清空书签</string>
	<string name="library_clear_collect_category">正在清空收藏分类</string>
	<string name="library_clear_collect_resource">正在清空收藏资源</string>
	<string name="library_clear_success">清空成功！</string>
	<string name="library_clear_fail">清空失败！</string>
	<string name="library_chapter_start_tips">已经到本章开头</string>
	<string name="library_chapter_end_tips">已经到本章结尾</string>
	<string name="library_already_read">已经读完</string>
	<string name="library_hour">时</string>
	<string name="library_minute">分</string>
	<string name="library_second">秒</string>
	<string name="library_cancel_loading">取消加载</string>
	<string-array name="library_category_list">
        <item>盲人资讯</item>
        <item>有声读物</item>
        <item>电子图书</item>
        <item>视频课程</item>
    </string-array>
    <string-array name="library_main_list">
        <item>我的图书馆</item>
        <item>资源检索</item>
        <item>电子图书</item>
        <item>有声读物</item>
        <item>视频课程</item>
        <item>盲人资讯</item>
        <item>个性推荐</item>
        <item>最新更新</item>
        <item>精品专区</item>
    </string-array>
    <string-array name="library_mylibrary_list">
        <item>我收藏的资源</item>
        <item>我收藏的分类</item>
        <item>我的阅读历史</item>
        <item>下载管理</item>
        <item>退出当前账号</item>
    </string-array>
    <string-array name="library_download_manager_list">
        <item>下载中</item>
        <item>已下载</item>
    </string-array>
    <string-array name="library_download_state_list">
        <item>等待下载</item>
        <item>正在下载</item>
        <item>已下载</item>
    </string-array>
    <string-array name="library_account_manager_list">
        <item>登录</item>
        <item>注册</item>
        <item>密码找回</item>
        <item>使用默认账号登录</item>
    </string-array>
    <string-array name="library_favorite_list">
        <item>新闻</item>
        <item>电子图书</item>
        <item>有声读物</item>
        <item>视频课程</item>
    </string-array>
    <string-array name="library_info_list">
        <item>新闻公告</item>
        <item>服务资讯</item>
        <item>文化活动</item>
    </string-array>
    <string-array name="library_resource_function_menu_list">
        <item>收藏分类</item>
        <item>收藏当前资源</item>
        <item>删除本地当前资源</item>
        <item>清空本地分类资源</item>
    </string-array>
    <string-array name="library_chapter_function_menu_list">
        <item>收藏当前资源</item>
        <item>下载当前资源</item>
        <item>删除本地当前资源</item>
    </string-array>
    <string-array name="library_ebook_function_menu_list">
        <item>书签管理</item>
        <item>上一章</item>
        <item>下一章</item>
        <item>跳至本章开头</item>
        <item>跳至本章页码</item>
        <item>朗读语音</item>
        <item>背景音乐</item>
    </string-array>
    <string-array name="library_news_function_menu_list">
        <item>上一条</item>
        <item>下一条</item>
        <item>跳至本条开头</item>
        <item>跳至本条页码</item>
        <item>朗读语音</item>
        <item>背景音乐</item>
    </string-array>
    <string-array name="library_bookmark_manager_list">
        <item>增加书签</item>
        <item>查看书签</item>
        <item>删除书签</item>
        <item>清空书签</item>
    </string-array>
    <string-array name="library_common_function_menu_list">
        <item>删除</item>
        <item>清空</item>
    </string-array>
    <string-array name="library_audio_function_menu_list">
        <item>书签管理</item>
        <item>上一章</item>
        <item>下一章</item>
        <item>跳至本章开头</item>
        <item>跳至本章百分比</item>
    </string-array>
    <string-array name="library_certificate_type_menu_list">
        <item>读者证件号</item>
        <item>二代残疾人证号</item>
    </string-array>
</resources>