<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/library_account_login_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:includeFontPadding="true"
            android:singleLine="true"
            android:textSize="@dimen/text_middle_size" />

        <View
            android:id="@+id/library_account_login_line"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_gravity="bottom"
            android:background="@android:color/white" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/library_account_login_username_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:gravity="left|center_vertical"
                android:includeFontPadding="true"
                android:text="@string/library_account_username"
                android:textSize="@dimen/text_middle_size" />

            <EditText
                android:id="@+id/library_account_login_username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center_vertical"
                android:hint="@string/library_account_login_username_hint"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:textSize="@dimen/text_middle_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/library_account_login_passwd_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:gravity="left|center_vertical"
                android:includeFontPadding="true"
                android:text="@string/library_account_passwd"
                android:textSize="@dimen/text_middle_size" />

            <EditText
                android:id="@+id/library_account_login_passwd_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center_vertical"
                android:hint="@string/library_account_login_passwd_hint"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:textSize="@dimen/text_middle_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/library_account_login_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:includeFontPadding="false"
                android:onClick="onClickForLogin"
                android:text="@string/library_account_login"
                android:textSize="@dimen/text_middle_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/library_account_login_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:includeFontPadding="false"
                android:onClick="onClickForCancel"
                android:text="@string/library_account_logout"
                android:textSize="@dimen/text_middle_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>