<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/library_account_passwd_recovery_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:textSize="@dimen/text_big_size" />

        <View
            android:id="@+id/library_account_passwd_recovery_line"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_gravity="bottom"
            android:background="@android:color/white" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- 证件号：按菜单键选择读者证件号、二代残疾人证号 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/library_account_passwd_recovery_certificate_no_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:includeFontPadding="false"
                android:text="@string/library_account_reader_certificate_no"
                android:textSize="@dimen/text_big_size" />

            <EditText
                android:id="@+id/library_account_passwd_recovery_certificate_no_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center_vertical"
                android:hint="@string/library_account_certificate_no_hint"
                android:includeFontPadding="false"
                android:nextFocusDown="@+id/library_account_passwd_recovery_name_input"
                android:nextFocusLeft="@+id/library_account_passwd_recovery_cancel"
                android:nextFocusRight="@+id/library_account_passwd_recovery_name_input"
                android:nextFocusUp="@+id/library_account_passwd_recovery_cancel"
                android:singleLine="false"
                android:textSize="@dimen/text_big_size" />
        </LinearLayout>

        <!-- 姓名 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/library_account_passwd_recovery_name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:includeFontPadding="false"
                android:text="@string/library_account_name"
                android:textSize="@dimen/text_big_size" />

            <EditText
                android:id="@+id/library_account_passwd_recovery_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center_vertical"
                android:hint="@string/library_account_name_hint"
                android:includeFontPadding="false"
                android:nextFocusDown="@+id/library_account_passwd_recovery_confirm"
                android:nextFocusLeft="@+id/library_account_passwd_recovery_certificate_no_input"
                android:nextFocusRight="@+id/library_account_passwd_recovery_confirm"
                android:nextFocusUp="@+id/library_account_passwd_recovery_certificate_no_input"
                android:singleLine="true"
                android:textSize="@dimen/text_big_size" />
        </LinearLayout>

        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="NestedWeights" >

                <Button
                    android:id="@+id/library_account_passwd_recovery_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:includeFontPadding="false"
                    android:nextFocusDown="@+id/library_account_passwd_recovery_cancel"
                    android:nextFocusLeft="@+id/library_account_passwd_recovery_name_input"
                    android:nextFocusRight="@+id/library_account_passwd_recovery_cancel"
                    android:nextFocusUp="@+id/library_account_passwd_recovery_name_input"
                    android:onClick="onClickForConfirm"
                    android:paddingBottom="@dimen/dialog_bottom_padding"
                    android:paddingLeft="@dimen/dialog_left_padding"
                    android:paddingRight="@dimen/dialog_right_padding"
                    android:paddingTop="@dimen/dialog_top_padding"
                    android:text="@string/library_account_nextstep"
                    android:textSize="@dimen/text_big_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/library_account_passwd_recovery_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:nextFocusDown="@+id/library_account_passwd_recovery_certificate_no_input"
                    android:nextFocusLeft="@+id/library_account_passwd_recovery_confirm"
                    android:nextFocusRight="@+id/library_account_passwd_recovery_certificate_no_input"
                    android:nextFocusUp="@+id/library_account_passwd_recovery_confirm"
                    android:onClick="onClickForCancel"
                    android:paddingBottom="@dimen/dialog_bottom_padding"
                    android:paddingLeft="@dimen/dialog_left_padding"
                    android:paddingRight="@dimen/dialog_right_padding"
                    android:paddingTop="@dimen/dialog_top_padding"
                    android:text="@string/library_account_cancel"
                    android:textSize="@dimen/text_big_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>